# Non-Gravitar

./: .gitignore  CMakeLists.txt  Coordination.md  LICENSE.md  Makefile  Observer.cpp  Observer.hpp  README.md  Relazione.odt  utils.cpp
samples/: SFMLClock.cpp  SFMLCollision.cpp  SFMLOrigin.cpp
src/: BoundingPolygon.cpp  BoundingPolygon.hpp  Bunker.cpp  Bunker.hpp  Circle.cpp  Circle.hpp  Entities.cpp  Entities.hpp  Entities.ipp  Event.cpp  Event.hpp  Fuel.cpp  Fuel.hpp  Line.cpp  Line.hpp  Missile.hpp  NonGravitar.cpp  Plane.cpp  Plane.hpp  PlaneObject.cpp  PlaneObject.hpp  PlaneTraits.cpp  PlaneTraits.hpp  PlaneTraits.ipp  Point.cpp  Point.hpp  Rectangle.cpp  Rectangle.hpp  RoundMissile.cpp  RoundMissile.hpp  Spaceship.cpp  Spaceship.hpp  Trajectory.hpp  Utils.cpp  Utils.hpp  Vector.cpp  Vector.hpp  Vector.ipp
src/BoundingPolygon/: BoundingPolygon.cpp  BoundingPolygon.hpp  BoundingRectangle.cpp  BoundingTriangle.cpp  BoundingTriangle.hpp
src/bounding-polygon/: BoundingPolygon.cpp  BoundingPolygon.hpp  BoundingRectangle.hpp  BoundingTriangle.cpp  BoundingTriangle.hpp
src/control/: CollisionController.cpp  CollisionController.hpp  Game.cpp  Game.hpp  GameInfo.cpp  GameInfo.hpp  GameViewController.cpp  GameViewController.hpp  MotionController.cpp  MotionController.hpp  MoveShipCallback.cpp  MoveShipCallback.hpp  PlanetSurfaceScene.cpp  PlanetSurfaceScene.hpp  RandomSSFactory.cpp  RandomSSFactory.hpp  Scene.cpp  Scene.hpp  SceneFrame.cpp  SceneFrame.hpp  SolarSystemScene.cpp  SolarSystemScene.hpp  SolarSystemSceneBuilder.cpp  SolarSystemSceneBuilder.hpp  SpaceshipController.cpp  SpaceshipController.hpp
src/model/: Bunker.cpp  Bunker.hpp  Circle.cpp  Circle.hpp  DummyBundle.cpp  DummyBundle.hpp  Fuel.cpp  Fuel.hpp  Line.cpp  Line.hpp  Plane.cpp  Plane.hpp  PlaneObject.cpp  PlaneObject.hpp  PlaneObject.ipp  Point.cpp  Point.hpp  Rectangle.cpp  Rectangle.hpp  RoundMissile.cpp  RoundMissile.hpp  Shape.cpp  Shape.hpp  Shape.ipp  ShapeBundle.cpp  ShapeBundle.hpp  ShapeTraits.hpp  Spaceship.cpp  Spaceship.hpp
src/shape/: Bunker.cpp  Bunker.hpp  CRPolygon.cpp  CRPolygon.hpp  Circle.cpp  Circle.hpp  ClosedShape.cpp  ClosedShape.hpp  Fuel.cpp  Fuel.hpp  Mountain.cpp  Mountain.hpp  MountainChain.cpp  MountainChain.hpp  Planet.cpp  Planet.hpp  Polyline.cpp  Polyline.hpp  Rectangle.cpp  Rectangle.hpp  RoundMissile.cpp  RoundMissile.hpp  Shape.cpp  Shape.hpp  Shape.ipp  Shape2D.cpp  Shape2D.hpp  ShapeTraits.hpp  ShapeVisitor.hpp  Spaceship.cpp  Spaceship.hpp  SpawnArea.cpp  SpawnArea.hpp  TractorBeam.cpp  TractorBeam.hpp
src/shape-bundle/: CollisionBundle.cpp  CollisionBundle.hpp  DummyBundle.hpp  ShapeBundle.cpp  ShapeBundle.hpp
src/shape-group/: CollisionGroup.cpp  CollisionGroup.hpp  DummyGroup.hpp  GridShapeLayout.cpp  GridShapeLayout.hpp  PlanetBuilder.cpp  PlanetBuilder.hpp  PlanetSurface.cpp  PlanetSurface.hpp  RoundShapeLayout.cpp  RoundShapeLayout.hpp  ShapeGroup.cpp  ShapeGroup.hpp  ShapeLayout.hpp  SolarSystem.cpp  SolarSystem.hpp
src/utils/: ALGraph.hpp  ALGraph.tpp  BoundingPolygon.cpp  BoundingPolygon.hpp  Event.cpp  Event.hpp  Event.tpp  Observer.cpp  Observer.hpp  Random.cpp  Random.hpp  Random.tpp  Utils.cpp  Utils.hpp  Vector.hpp  Vector.ipp
src/view/: BunkerView.cpp  BunkerView.hpp  ClosedShapeView.cpp  ClosedShapeView.hpp  Debuggable.hpp  DebuggableView.cpp  DebuggableView.hpp  FuelView.cpp  FuelView.hpp  GameInfoView.cpp  GameInfoView.hpp  GraphicAssets.cpp  GraphicAssets.hpp  MountainView.cpp  MountainView.hpp  PlanetView.cpp  PlanetView.hpp  PolylineView.cpp  PolylineView.hpp  RoundMissileView.cpp  RoundMissileView.hpp  Shape2DView.cpp  Shape2DView.hpp  ShapeBundleView.cpp  ShapeBundleView.hpp  ShapeGroupView.cpp  ShapeGroupView.hpp  ShapeView.cpp  ShapeView.hpp  ShapeViewFactory.cpp  ShapeViewFactory.hpp  SpaceshipView.cpp  SpaceshipView.hpp  SpawnAreaView.cpp  SpawnAreaView.hpp  TractorBeamView.cpp  TractorBeamView.hpp
static/graphics/: bunker.xcf  fuel.xcf  spaceship-accelerating.xcf  spaceship.xcf
test/: CMakeLists.txt  test-algraph.cpp  test-bounding-polygon.cpp  test-bunker.cpp  test-circle.cpp  test-entities.cpp  test-event.cpp  test-line.cpp  test-main.cpp  test-observer.cpp  test-point.cpp  test-random.cpp  test-rectangle.cpp  test-utils.cpp  test-vector.cpp
